# metapho

./: .gitignore  .readthedocs.yml  CHANGELOG  INSTALL  MANIFEST  README.md  README.rst  README.txt  metapho  pyproject.toml  requirements.txt  setup.py
MetaPho/: MetaPho.py  __init__.py  gtkpho.py  metapho.py
doc/: README  conf.py  fotogr.1.md  fotogr.1.rst  index.rst  metapho.1  metapho.1.md  metapho.1.rst  metapho.1.txt  metapho.xcf  modules.rst  notags.1.md  notags.1.rst  pho.rst  photoshare.1.md  photoshare.1.rst
doc/html/: api-objects.txt  class-tree.html  help.html  identifier-index.html  index.html  metapho-module.html  metapho-pysrc.html  metapho.gtkpho-module.html  metapho.gtkpho-pysrc.html  metapho.gtkpho.ImageViewer-class.html  metapho.gtkpho.TagViewer-class.html  metapho.main-module.html  metapho.main-pysrc.html  metapho.main.MetaPhoWindow-class.html  metapho.metapho-module.html  metapho.metapho-pysrc.html  metapho.metapho.Image-class.html  metapho.metapho.Tagger-class.html  module-tree.html  redirect.html
doc/sphinxdoc/: conf.py  fotogr-manual.rst  index.rst  metapho-manual.md  metapho-manual.rst  metapho.gtkpho.rst  metapho.rst  notags-manual.rst  pho-manual.rst  photoshare-manual.rst  requirements.txt
helpers/: nokeywords  notags
metapho/: __init__.py  gtkpho.py  imagelist.py  main.py  metapho.py  tagger.py
metapho/gtkpho/: ImageViewer.py  __init__.py  gtkpho.py  main.py
metapho/scripts/: fotogr.py  photoshare.py
metapho/tkpho/: ImageViewer.py  PhoWidget.py  __init__.py  pho.py  tkPhoWidget.py  tkTagViewer.py  tk_pho_image.py  tk_pho_widget.py  tk_tag_viewer.py  tkdialogs.py  tkpho.py
scripts/: fotogr.py
test/: test_fotogr.py  test_imagelists.py  test_notags.py  test_tkpho.py
test/files/: Tags
